[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "promptforge"
version = "1.0.0"
description = "Production-grade, model-aware semantic prompt compression library."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Prompt Optimizer Contributors" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Optional dependency: "tiktoken" is only strictly required for exact ChatGPT counts
]

[project.optional-dependencies]
openai = ["tiktoken>=0.7.0"]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.3.0",
    "mypy>=1.0.0",
]

[project.scripts]
promptforge = "promptforge.cli:main"

[tool.setuptools.packages.find]
include = ["promptforge*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
